--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -13,7 +13,7 @@ $this->headTitle($title);
         <th>Artist</th>
         <th>&nbsp;</th>
     </tr>
-    <?php foreach ($albums as $album) : ?>
+    <?php foreach ($this->paginator as $album) : ?>
         <tr>
             <td><?= $this->escapeHtml($album->title) ?></td>
             <td><?= $this->escapeHtml($album->artist) ?></td>
@@ -24,3 +24,13 @@ $this->headTitle($title);
         </tr>
     <?php endforeach; ?>
 </table>
+<?= $this->paginationControl(
+        // the paginator object:
+        $this->paginator,
+        // the scrolling style:
+        'sliding',
+        // the partial to use to render the control:
+        'partial/paginator',
+        // the route to link to when a user clicks a control link:
+        ['route' => 'album']
+) ?>
