--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -53,7 +53,7 @@
             <?= $this->content ?>
             <hr>
             <footer>
-                <p>&copy; 2005 - <?= date('Y') ?> by Zend Technologies Ltd. All rights reserved.</p>
+                <p>&copy; 2005 - <?= date('Y') ?> by Zend Technologies Ltd. <?= $this->translate('All rights reserved')?>.</p>
             </footer>
         </div>
         <?= $this->inlineScript() ?>
