--- a/module/Customer/view/customer/customer/placeholder.phtml
+++ b/module/Customer/view/customer/customer/placeholder.phtml
@@ -5,6 +5,7 @@
         </div>
         <div class="col-md-4">
             <strong>This is right sidebar.</strong>
+            <em><?= $this->hello() ?></em>
         </div>
     </div>
     <?= $this->headScript()->appendFile('/js/test.js') ?>
