Update User Module

--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -1,7 +1,7 @@
 <?php
 $this->headTitle('Sign in');
 
-$this->mainMenu()->setActiveItemId('login');
+//$this->mainMenu()->setActiveItemId('login');
 
 $form->get('email')->setAttributes([
     'class' => 'form-control',
