--- a/module/User/view/user/user/add.phtml
+++ b/module/User/view/user/user/add.phtml
@@ -1,7 +1,7 @@
 <?php
 $this->headTitle('Add User');
 
-$this->mainMenu()->setActiveItemId('users');
+//$this->mainMenu()->setActiveItemId('users');
 
 $this->pageBreadcrumbs()->setItem([
     'Home' => $this->url('home'),
