--- a/module/User/view/user/user/index.phtml
+++ b/module/User/view/user/user/index.phtml
@@ -1,7 +1,7 @@
 <?php
 $this->headTitle('Users');
 
-$this->mainMenu()->setActiveItemId('users');
+//$this->mainMenu()->setActiveItemId('users');
 
 $this->pageBreadcrumbs()->setItems([
     'Home' => $this->url('home'),
